fix overflow

--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
 
-/*	
+/*
 	## Global
 		- Padding/Margin
 		- Section Padding
 		- Block Title
 		- Section Header
 		- Page Banner
-		
-	## Fonts Settings	
+
+	## Fonts Settings
 		- Work Sans
 		- Josefin Sans
 		- Raleway
 		- Arimo
-		- Hind 
+		- Hind
 		- Myriad Pro Regular
-		
+
 	## Header
 		- Top Header
 			- Social
 			- Logo Block
-			- Register			
+			- Register
 		- Menu Block
 			- User
 			- Expanding Search
-			
+
 	## Footer
 		- Footer Main
 			- Footer About
@@ -33,11 +33,11 @@
 			- NeweLetter Widget
 			- CopyRights
 			- Footer Menu
-	
+
 	## Page Banner
-	
+
 	## Section Header
-	
+
 	## Responsive
 		- min-width: 1200
 		- min-width: 992 to max-width: 1199
@@ -52,7 +52,7 @@
 
 html, body {
 max-width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 body {
@@ -1499,7 +1499,7 @@ a {
     .container {
         width: 1200px;
     }
-    
+
 
 }
 
@@ -1515,7 +1515,7 @@ a {
     .footer-main .widget_newsletter ul li {
         margin-right: 6px;
     }
-    
+
 }
 
 
@@ -1599,7 +1599,7 @@ a {
     .footer-menu .ow-navigation .nav.navbar-nav .dropdown-menu li:hover>a {
         color: #ececec;
     }
-    
+
 
 }
 
@@ -1620,13 +1620,13 @@ a {
         padding-top: 30px;
         padding-bottom: 30px;
     }
-    
+
         .anuncio_frase {
     font-size: 15px !important;
             padding: 10px 40px 10px 40px !important
 }
 
-            
+
 }
 
 
@@ -1662,8 +1662,8 @@ a {
 /* - max-width: 479 */
 
 @media (max-width: 479px) {
-    
-    
+
+
     /* - Top Header */
     .top-header .col-xs-6 {
         width: 100%;
@@ -1705,7 +1705,7 @@ a {
         font-size: 20px;
         letter-spacing: 0.5px;
     }
-    
+
     /* - Page Banner */
     .page-banner .banner-content h3 {
         font-size: 18px;
@@ -1865,7 +1865,7 @@ a {
     background-attachment: fixed;
 }
 
-.parallax_pat  {  
+.parallax_pat  {
 background-image: url(images/custom/back_parallax1.png);
 }
 
@@ -1965,7 +1965,7 @@ background-image: url(images/custom/back_parallax1.png);
 	flex: 1 0 auto;
 	height: auto;
 	position: relative;
-    
+
 }
 
 
@@ -2005,7 +2005,7 @@ padding: 100px
 
 
 .flex_center {
-   
+
 vertical-align: middle;
 }
 
